# DS-Wet-2

./: BinTree.cpp  CMakeLists.txt  Coliseum.cpp  Coliseum.h  CompGlads.cpp  CompGlads.h  DSFunctions.cpp  Exceptions.h  Gladiator.cpp  Gladiator.h  StatusType.h  Trainer.cpp  Trainer.h  TreeNode.h  binTree.h  binTreeTests.cpp  genericFunction.h  linkedList.h  main2.cpp  main3.cpp  main4.cpp  mainSys.cpp  splayTree.h  submissions.txt
